@@ -45,7 +45,7 @@
 }
 
 li a.active {
-	color: #444;
+	color: #e42929;
 }
 
 /* ---------- Header ---------- */
@@ -325,4 +325,14 @@ body {
 	margin: 0;
 	padding: 0 1rem;
 	background-color: #fff;
+}
+.menu span.static.group.noactive {
+	color: #258fd6;
+}
+.menu span::before {
+	content: '\25bc';
+}
+.menu span.static.group.active,
+.menu ul  li.static.active a {
+	color: #e42929;
 }
