@@ -17,6 +17,8 @@
 [+] plxShow:templateCSS - Prise en compte des fichiers css minifiés si disponibles (contribution alexandre-lg)
 [+] Réglage de l'affichage de l'indentation des commentaires sur smartphones (contribution kowalsky)
 [+] Ajout du hook plxMotorRedir301 dans la classe plxMotor
+[+] plxShow::staticList : ajout de la variable #group_status
+[+] Thème par défaut : affichage des groupes de pages statiques sous forme de menus déroulant
 [+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
 [+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
 [+] #191: plxShow:catList - Ajout de la variable #cat_description
